# tauformer-hf

./: .gitignore  ADVANTAGES.md  Cargo.toml  MULTIHEAD.md  README.md
cve_corpus/: cwe_glossary.txt  embeddings_model.py
examples/: 01_generate.rs  check_features.rs
src/: causalattention.rs  checkpoint.rs  engine.rs  lib.rs  main.rs  parquet.rs  pretraining.rs  sampling.rs  tauattention.rs  taugpt.rs  taumode.rs
src/pretraining/: parquet.rs
src/tests/: mod.rs  test_attention_accuracy.rs  test_attention_stability.rs  test_causal_taumode.rs  test_checkpoint.rs  test_compare.rs  test_gpt.rs  test_mqa_regimes.rs  test_sampling.rs  test_tauattention.rs  test_taugpt.rs  test_taumode.rs  test_tokenizer.rs
